--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
     "vite": "^4.3.9"
   }
 }
